--- a/static/juego.css
+++ b/static/juego.css
@@ -186,6 +186,14 @@ button:hover {
   font-size: 0.9rem;
   transition: background 0.3s;
 }
+#progressBarContainer {
+  width: 100px;
+  height: 10px;
+  margin: 10px auto;
+  border: 1px solid #444;
+  background-color: #eee;
+  display: none; /* <-- oculto por defecto */
+}
 
 #welcome button:hover {
   background-color: #b71c1c;
