--- a/static/juego.css
+++ b/static/juego.css
@@ -195,6 +195,16 @@ button:hover {
   display: none; /* <-- oculto por defecto */
 }
 
+#introVideo {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 9999;
+  background: black;
+}
+
 #welcome button:hover {
   background-color: #b71c1c;
 }
